benchmark-results/8/merge/cseq/concurrentwitness2test.2024-11-27_10-15-16.logfiles/SV-COMP23_unreach-call.cseq-mix031.oepc.yml.log
ConcurrentWitness2Test/start.sh svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/mix031.oepc.yml/mix031.oepc.i --graphml-witness svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/mix031.oepc.yml/witness.graphml


--------------------------------------------------------------------------------


Traceback (most recent call last):
  File "/home/runner/work/ConcurrentWitness2Test/ConcurrentWitness2Test/ConcurrentWitness2Test/main.py", line 85, in translate_to_c
    sys.exit(-1)
SystemExit: -1
/tmp/BenchExec_run_2e0ww15w/tmp/tmp0bgxfkzr.c
Compilation started
/tmp/BenchExec_run_2e0ww15w/tmp/tmp0bgxfkzr.c: In function ‘P1’:
/tmp/BenchExec_run_2e0ww15w/tmp/tmp0bgxfkzr.c:612:19: error: ‘FALSE’ undeclared (first use in this function)
  612 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_2e0ww15w/tmp/tmp0bgxfkzr.c:612:19: note: each undeclared identifier is reported only once for each function it appears in

Compilation ended (exit code 1)
Verdict: Compilation error
Verdict: Unknown error
